CO4 AT1(LEVEL 2)
============================================================================================
Student #12 | PRITHIYANKA SHREE M | 192521144HC
============================================================================================
[1] QID: 47
Question : Write a program to read a character until a * is encountered. Also count the numb
er of uppercase, lowercase, and numbers entered by the users.
Sample Input:
Enter * to exit
Enter any character: W
Enter any character: d
Enter any character: A
Enter any character: G
Enter any character: g
Enter any character: H
Enter any character: *
Sample Output:
Total count of lower case:2
Total count of upper case:4
Total count of numbers =0
Testcases: 1. 1,7,6,9,5
2. S, Q, l, K,7, j, M
3. M, j, L, &, @, G
4. D, K, I, 6, L, *
5. *, K, A, e, 1, 8, %, *
Program : import java.io.*;
import java.util.*;
class Count
{
public static void main(string args[])
{
char a[]=new char[];
Scanner s=new Scanner(System.in);
for(int i=0;i
Input : (no input)
Output : (no output)
First Save: 2026-06-23 16:08:48
Last Save : 2026-06-23 16:17:21
----------------------------------------------------------------------------------------
[2] QID: 36
Question : Write a program to count all the prime and composite numbers entered by the user.
Sample Input:
Enter the numbers
4
54
29
71
7
59
98
23
Sample Output:
Composite number:3
Prime number:5

Submitted Answers Report
Testcases:
1. 33, 41, 52, 61,73,90
2. TEN, FIFTY, SIXTY-ONE, SEVENTY-SEVEN, NINE
3. 45, 87, 09, 5.0 ,2.3, 0.4
4. -54, -76, -97, -23, -33, -98
5. 45, 73, 00, 50, 67, 44

Program : import java.io.*;
import java.util.*;
class Prime
{
public static void main(String args[])
{
Scanner s=new Scanner(System.in);
int[]a=new int[10];
int count=0,count1=0;
for(int i=0;i
Input : 4
54
29
71
7
59
98
23
Output : 5
3

First Save: 2026-06-23 15:07:46
Last Save : 2026-06-23 16:21:10
----------------------------------------------------------------------------------------
[3] QID: 38
Question : Write a program to print the total amount available in the ATM machine with the c
onditions applied.
Total denominations are 2000, 500, 200, 100, get the denomination priority from t
he user and the total number of notes from the user to display the total availabl
e balance to the user
Sample Input:
Enter the 1st Denomination: 500
Enter the 1st Denomination number of notes: 4
Enter the 2nd Denomination: 100
Enter the 2nd Denomination number of notes: 20
Enter the 3rd Denomination: 200
Enter the 3rd Denomination number of notes: 32
Enter the 4th Denomination: 2000
Enter the 4th Denomination number of notes: 1
Sample Output:
Total Available Balance in ATM: 12400
Testcases:
Program : import java.io.*;
import java.util.*;
class Denomination
{
public static void main(String args[])
{

Submitted Answers Report
int total=0;
int deno,note;
Scanner s=new Scanner(System.in);
for(int i=0;i
Input : 500
2
Output : Error: Denomination.java:13: error: cannot find symbol
System.out.ptintln("ENTER THE "+i+" DENOMINATION = "+deno);
^
symbol: method ptintln(String)
location: variable out of type PrintStream
1 error
First Save: 2026-06-23 15:01:01
Last Save : 2026-06-23 16:23:02
----------------------------------------------------------------------------------------
[4] QID: 13
Question : Write a program for matrix multiplication?
Sample Input:
Mat1 =
1 2
5 3
Mat2 =
2 3
4 1
Sample Output:
Mat Sum =
10 5
22 18

Program : import java.io.*;
import java.util.*;
class Mat
{
public static void main(String args[])
{
Scanner s=new Scanner(System.in);
int[][] a=new int[2][2];
int[][]b=new int[2][2];
int[][]m=new int[2][2];
int r,c,k;
for(r=0;r
Input : 1 2
5 3
2 3
4 1
Output : 10
5
22
18

First Save: 2026-06-23 14:46:07
Last Save : 2026-06-23 16:19:55
First Save: 2026-06-23 14:46:07 Last Save : 2026-06-23 16:19:55 
